--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -10,8 +10,6 @@ jobs:
       matrix:
         working-directory:
           - ""
-          - test
-          - hack/tools
     steps:
       - uses: actions/checkout@v2
       - name: golangci-lint
@@ -19,3 +17,4 @@ jobs:
         with:
           version: v1.43.0
           working-directory: ${{matrix.working-directory}}
+          args: --timeout 3m0s
