--- a/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
@@ -929,6 +929,12 @@ spec:
                             of the container arg `--sync-period` if both are defined.
                             The same holds for `ManagerSpec.FeatureGates` and `--feature-gates`.
                           type: object
+                        command:
+                          description: Command allows override container's entrypoint
+                            array.
+                          items:
+                            type: string
+                          type: array
                         env:
                           description: List of environment variables to set in the
                             container.
