Make version field required on API schema level

--- a/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
@@ -1403,6 +1403,8 @@ spec:
               version:
                 description: Version indicates the provider version.
                 type: string
+            required:
+            - version
             type: object
           status:
             description: ControlPlaneProviderStatus defines the observed state of
