--- a/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
@@ -1402,6 +1402,8 @@ spec:
               version:
                 description: Version indicates the provider version.
                 type: string
+            required:
+            - version
             type: object
           status:
             description: CoreProviderStatus defines the observed state of CoreProvider.
