Add github token to e2e tests

--- a/test/e2e/config/operator-dev.yaml
+++ b/test/e2e/config/operator-dev.yaml
@@ -10,3 +10,4 @@ intervals:
 
 variables:
   CERTMANAGER_URL: https://github.com/cert-manager/cert-manager/releases/download/${CERT_MANAGER_VERSION}/cert-manager.yaml
+  GITHUB_TOKEN: ${GITHUB_TOKEN}
