Fix release workflow version

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,7 +27,7 @@ jobs:
         run: |
           make release
       - name: Create draft GH release
-        uses: softprops/action-gh-release@1
+        uses: softprops/action-gh-release@v1
         with:
           draft: true
           files: |
