Allow running operator on ARM

--- a/config/chart/manager_auth_proxy_patch.yaml
+++ b/config/chart/manager_auth_proxy_patch.yaml
@@ -17,6 +17,7 @@ spec:
                   operator: In
                   values:
                     - amd64
+                    - arm64
                 - key: kubernetes.io/os
                   operator: In
                   values:
