--- a/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
@@ -1082,7 +1082,7 @@ spec:
                                 in spec.resourceClaims, that are used by this container.
                                 \n This is an alpha field and requires enabling the
                                 DynamicResourceAllocation feature gate. \n This field
-                                is immutable."
+                                is immutable. It can only be set for containers."
                               items:
                                 description: ResourceClaim references one entry in
                                   PodSpec.ResourceClaims.
@@ -1121,7 +1121,7 @@ spec:
                                 of compute resources required. If Requests is omitted
                                 for a container, it defaults to Limits if that is
                                 explicitly specified, otherwise to an implementation-defined
-                                value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
+                                value. Requests cannot exceed Limits. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
                               type: object
                           type: object
                       required:
@@ -1392,7 +1392,7 @@ spec:
                     minimum: 1
                     type: integer
                   metrics:
-                    description: Metrics contains thw controller metrics configuration
+                    description: Metrics contains the controller metrics configuration
                     properties:
                       bindAddress:
                         description: BindAddress is the TCP address that the controller
