Deploy operator CR based on input values

--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -3,3 +3,10 @@ cert-manager:
   enabled: false
   fullnameOverride: "cert-manager"
   namespace: "cert-manager"
+
+core: ""
+bootstrap: ""
+controlPlane: ""
+infrastructure: ""
+secretName: ""
+secretNamespace: ""
