--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -32,9 +32,7 @@ image:
     pullPolicy: IfNotPresent
 healthAddr: ":8081"
 metricsBindAddr: "127.0.0.1:8080"
-imagePullSecrets:
-  manager: {}
-  kubeRBACProxy: {}
+imagePullSecrets: {}
 resources:
   manager:
     limits:
