Add addon provider to API

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -11,6 +11,28 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /mutate-operator-cluster-x-k8s-io-v1alpha2-addonprovider
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: vaddonprovider.kb.io
+  rules:
+  - apiGroups:
+    - operator.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha2
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - addonproviders
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
       path: /mutate-operator-cluster-x-k8s-io-v1alpha2-bootstrapprovider
   failurePolicy: Fail
   matchPolicy: Equivalent
@@ -98,6 +120,28 @@ kind: ValidatingWebhookConfiguration
 metadata:
   name: validating-webhook-configuration
 webhooks:
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-operator-cluster-x-k8s-io-v1alpha2-addonprovider
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: vaddonprovider.kb.io
+  rules:
+  - apiGroups:
+    - operator.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha2
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - addonproviders
+  sideEffects: None
 - admissionReviewVersions:
   - v1
   - v1beta1
