Add addon provider to helm chart

--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -11,6 +11,7 @@ core: ""
 bootstrap: ""
 controlPlane: ""
 infrastructure: ""
+addon: ""
 # ---
 # Common configuration secret options
 configSecret: {}
