--- a/hack/charts/cluster-api-operator/templates/infra.yaml
+++ b/hack/charts/cluster-api-operator/templates/infra.yaml
@@ -30,7 +30,7 @@ metadata:
     "helm.sh/hook-weight": "1"
   name: {{ $infrastructureNamespace }}
 ---
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: InfrastructureProvider
 metadata:
   name: {{ $infrastructureName }}
@@ -38,17 +38,18 @@ metadata:
   annotations:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "2"
-{{- if or $infrastructureVersion $.Values.secretName }}
+{{- if or $infrastructureVersion $.Values.configSecret.name }}
 spec:
 {{- end }}
 {{- if $infrastructureVersion }}
   version: {{ $infrastructureVersion }}
 {{- end }}
-{{- if $.Values.secretName }}
-  secretName: {{ $.Values.secretName }}
-{{- end }}
-{{- if $.Values.secretNamespace }}
-  secretNamespace: {{ $.Values.secretNamespace }}
+{{- if $.Values.configSecret.name }}
+  configSecret:
+    name: {{ $.Values.configSecret.name }}
+    {{- if $.Values.configSecret.namespace }}
+    namespace: {{ $.Values.configSecret.namespace }}
+    {{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
