--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -13,8 +13,7 @@ controlPlane: ""
 infrastructure: ""
 # ---
 # Common configuration secret options
-secretName: ""
-secretNamespace: ""
+configSecret: {}
 # ---
 # CAPI operator deployment options
 logLevel: 2
