--- a/hack/charts/cluster-api-operator/templates/control-plane-conditions.yaml
+++ b/hack/charts/cluster-api-operator/templates/control-plane-conditions.yaml
@@ -10,7 +10,7 @@ metadata:
     "helm.sh/hook-weight": "1"
   name: capi-system
 ---
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: CoreProvider
 metadata:
   name: cluster-api
@@ -18,12 +18,13 @@ metadata:
   annotations:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "2"
-{{- if .Values.secretName }}
+{{- with .Values.configSecret }}
 spec:
-  secretName: {{ .Values.secretName }}
-{{- if .Values.secretNamespace }}
-  secretNamespace: {{ .Values.secretNamespace }}
-{{- end }}
+  configSecret:
+    name: {{ .name }}
+    {{- if .namespace }}
+    namespace: {{ .namespace }}
+    {{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
