--- a/hack/charts/cluster-api-operator/templates/core.yaml
+++ b/hack/charts/cluster-api-operator/templates/core.yaml
@@ -29,7 +29,7 @@ metadata:
     "helm.sh/hook-weight": "1"
   name: {{ $coreNamespace }}
 ---
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: CoreProvider
 metadata:
   name: {{ $coreName }}
@@ -37,16 +37,17 @@ metadata:
   annotations:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "2"
-{{- if or $coreVersion .Values.secretName }}
+{{- if or $coreVersion $.Values.configSecret.name }}
 spec:
 {{- end}}
 {{- if $coreVersion }}
   version: {{ $coreVersion }}
 {{- end }}
-{{- if .Values.secretName }}
-  secretName: {{ .Values.secretName }}
-{{- end }}
-{{- if .Values.secretNamespace }}
-  secretNamespace: {{ .Values.secretNamespace }}
+{{- if $.Values.configSecret.name }}
+  configSecret:
+    name: {{ $.Values.configSecret.name }}
+    {{- if $.Values.configSecret.namespace }}
+    namespace: {{ $.Values.configSecret.namespace }}
+    {{- end }}
 {{- end }}
 {{- end }}
