--- a/hack/charts/cluster-api-operator/templates/infra-conditions.yaml
+++ b/hack/charts/cluster-api-operator/templates/infra-conditions.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.infrastructure }}
+
 # Deploy core, bootstrap, and infrastructure components if not specified
 {{- if not .Values.core }}
 ---
@@ -10,7 +11,7 @@ metadata:
     "helm.sh/hook-weight": "1"
   name: capi-system
 ---
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: CoreProvider
 metadata:
   name: cluster-api
@@ -18,14 +19,16 @@ metadata:
   annotations:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "2"
-{{- if .Values.secretName }}
+{{- with .Values.configSecret }}
 spec:
-  secretName: {{ .Values.secretName }}
-{{- if .Values.secretNamespace }}
-  secretNamespace: {{ .Values.secretNamespace }}
+  configSecret:
+    name: {{ .name }}
+    {{- if .namespace }}
+    namespace: {{ .namespace }}
+    {{- end }}
 {{- end }}
 {{- end }}
-{{- end }}
+
 {{- if not .Values.bootstrap }}
 ---
 apiVersion: v1
@@ -36,7 +39,7 @@ metadata:
     "helm.sh/hook-weight": "1"
   name: capi-kubeadm-bootstrap-system
 ---
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: BootstrapProvider
 metadata:
   name: kubeadm
@@ -44,14 +47,16 @@ metadata:
   annotations:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "2"
-{{- if .Values.secretName }}
+{{- with .Values.configSecret }}
 spec:
-  secretName: {{ .Values.secretName }}
-{{- if .Values.secretNamespace }}
-  secretNamespace: {{ .Values.secretNamespace }}
+  configSecret:
+    name: {{ .name }}
+    {{- if .namespace }}
+    namespace: {{ .namespace }}
+    {{- end }}
 {{- end }}
 {{- end }}
-{{- end }}
+
 {{- if not .Values.controlPlane }}
 ---
 apiVersion: v1
@@ -62,7 +67,7 @@ metadata:
     "helm.sh/hook-weight": "1"
   name: capi-kubeadm-control-plane-system
 ---
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: ControlPlaneProvider
 metadata:
   name: kubeadm
@@ -70,12 +75,14 @@ metadata:
   annotations:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "2"
-{{- if .Values.secretName }}
+{{- with .Values.configSecret }}
 spec:
-  secretName: {{ .Values.secretName }}
-{{- if .Values.secretNamespace }}
-  secretNamespace: {{ .Values.secretNamespace }}
+  configSecret:
+    name: {{ .name }}
+    {{- if .namespace }}
+    namespace: {{ .namespace }}
+    {{- end }}
 {{- end }}
 {{- end }}
-{{- end }}
+
 {{- end }}
