Integrate CAPI operator with global owner resource

--- a/hack/charts/cluster-api-operator/Chart.yaml
+++ b/hack/charts/cluster-api-operator/Chart.yaml
@@ -9,3 +9,7 @@ dependencies:
     version: "0.0.0"
     repository: https://charts.jetstack.io
     condition: cert-manager.enabled
+  - name: global-owner
+    version: "v0.2.2"
+    repository: oci://ghcr.io/danil-grigorev
+    condition: global-owner.enabled
