--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -6,6 +6,10 @@ cert-manager:
   fullnameOverride: "cert-manager"
   namespace: "cert-manager"
 # ---
+# Global Owner options
+global-owner:
+  enabled: true
+# ---
 # Cluster API provider options
 core: ""
 bootstrap: ""
