Add resource patches to API

--- a/config/crd/bases/operator.cluster.x-k8s.io_addonproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_addonproviders.yaml
@@ -1466,6 +1466,15 @@ spec:
                         type: integer
                     type: object
                 type: object
+              manifestPatches:
+                description: ManifestPatches are applied to rendered provider manifests
+                  to customize the provider manifests. Patches are applied in the
+                  order they are specified. The `kind` field must match the target
+                  object, and if `apiVersion` is specified it will only be applied
+                  to matching objects. This should be an inline yaml blob-string https://datatracker.ietf.org/doc/html/rfc7396
+                items:
+                  type: string
+                type: array
               version:
                 description: Version indicates the provider version.
                 type: string
