Add a generic condition for core provider installation in chart
Signed-off-by: alexander-demicev <alexandr.demicev@suse.com>

--- a/hack/charts/cluster-api-operator/templates/infra-conditions.yaml
+++ b/hack/charts/cluster-api-operator/templates/infra-conditions.yaml
@@ -1,34 +1,6 @@
 {{- if .Values.infrastructure }}
 
-# Deploy core, bootstrap, and infrastructure components if not specified
-{{- if not .Values.core }}
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  annotations:
-    "helm.sh/hook": "post-install"
-    "helm.sh/hook-weight": "1"
-  name: capi-system
----
-apiVersion: operator.cluster.x-k8s.io/v1alpha2
-kind: CoreProvider
-metadata:
-  name: cluster-api
-  namespace: capi-system
-  annotations:
-    "helm.sh/hook": "post-install"
-    "helm.sh/hook-weight": "2"
-{{- with .Values.configSecret }}
-spec:
-  configSecret:
-    name: {{ .name }}
-    {{- if .namespace }}
-    namespace: {{ .namespace }}
-    {{- end }}
-{{- end }}
-{{- end }}
-
+# Deploy bootstrap, and infrastructure components if not specified
 {{- if not .Values.bootstrap }}
 ---
 apiVersion: v1
