--- a/test/e2e/resources/all-providers-custom-versions.yaml
+++ b/test/e2e/resources/all-providers-custom-versions.yaml
@@ -1,4 +1,13 @@
 ---
+# Source: cluster-api-operator/templates/addon.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  annotations:
+    "helm.sh/hook": "post-install"
+    "helm.sh/hook-weight": "1"
+  name: helm-addon-system
+---
 # Source: cluster-api-operator/templates/bootstrap.yaml
 apiVersion: v1
 kind: Namespace
@@ -34,6 +43,18 @@ metadata:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "1"
   name: docker-infrastructure-system
+---
+# Source: cluster-api-operator/templates/addon.yaml
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
+kind: AddonProvider
+metadata:
+  name: helm
+  namespace: helm-addon-system
+  annotations:
+    "helm.sh/hook": "post-install"
+    "helm.sh/hook-weight": "2"
+spec:
+  version: v0.1.0-alpha.9
 ---
 # Source: cluster-api-operator/templates/bootstrap.yaml
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
