--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -28,6 +28,8 @@ image:
     pullPolicy: IfNotPresent
 healthAddr: ":8081"
 metricsBindAddr: "127.0.0.1:8080"
+diagnosticsAddress: "8443"
+insecureDiagnostics: false
 imagePullSecrets: {}
 resources:
   manager:
