--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -26,10 +26,6 @@ image:
     repository: gcr.io/k8s-staging-capi-operator/cluster-api-operator
     tag: dev
     pullPolicy: IfNotPresent
-  kubeRBACProxy:
-    repository: gcr.io/kubebuilder/kube-rbac-proxy
-    tag: v0.14.1
-    pullPolicy: IfNotPresent
 healthAddr: ":8081"
 metricsBindAddr: "127.0.0.1:8080"
 imagePullSecrets: {}
@@ -41,19 +37,7 @@ resources:
     requests:
       cpu: 100m
       memory: 100Mi
-  kubeRBACProxy:
-    limits:
-      cpu: 500m
-      memory: 128Mi
-    requests:
-      cpu: 5m
-      memory: 64Mi
-containerSecurityContext:
-  kubeRBACProxy:
-    allowPrivilegeEscalation: false
-    capabilities:
-      drop:
-        - ALL
+containerSecurityContext: {}
 affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
