--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,7 +15,7 @@ updates:
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     groups:
       ## group all dependencies with a k8s.io prefix into a single PR.
       kubernetes:
@@ -49,7 +49,7 @@ updates:
   - package-ecosystem: "gomod"
     directory: "/test"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     ## group all dependencies with a k8s.io prefix into a single PR.
     groups:
       kubernetes:
